--- a/online_store/public/index.html
+++ b/online_store/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
+    <script
+  defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcT639g4moaZZRogkKeLQ6e0T5EzokO44&libraries=places"
+></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
