--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <title>React App</title>
-    <script defer="defer"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcT639g4moaZZRogkKeLQ6e0T5EzokO44&libraries=places"></script>
-    <script defer="defer" src="/Strawbarry-proj/static/js/main.6111cb64.js"></script>
-    <link href="/Strawbarry-proj/static/css/main.8e901cee.css" rel="stylesheet">
-</head>
-<body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>React App</title><script defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcT639g4moaZZRogkKeLQ6e0T5EzokO44&libraries=places"></script><base href="https://govyazina.github.io/Strawbarry-proj/" target="_blank"><script defer="defer" src="/static/js/main.6111cb64.js"></script><link href="/static/css/main.8e901cee.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
