--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script defer="defer"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcT639g4moaZZRogkKeLQ6e0T5EzokO44&libraries=places"></script>
     <base href="/Strawbarry-proj/">
-    <script defer="defer" src="/static/js/main.6111cb64.js"></script>
-    <link href="/static/css/main.8e901cee.css" rel="stylesheet">
+    <script defer="defer" src="/Strawbarry-proj/static/js/main.6111cb64.js"></script>
+    <link href="/Strawbarry-proj/static/css/main.8e901cee.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
