--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>React App</title>
     <script defer="defer"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcT639g4moaZZRogkKeLQ6e0T5EzokO44&libraries=places"></script>
-    <base href="/Strawbarry-proj/">
-    <script defer="defer" src="/Strawbarry-proj/static/js/main.6111cb64.js"></script>
-    <link href="/Strawbarry-proj/static/css/main.8e901cee.css" rel="stylesheet">
+    <base href="/Strawberry-proj/">
+    <script defer="defer" src="/Strawberry-proj/static/js/main.6111cb64.js"></script>
+    <link href="/Strawberry-proj/static/css/main.8e901cee.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
