--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcT639g4moaZZRogkKeLQ6e0T5EzokO44&libraries=places"
     ></script>
-    <base href="https://govyazina.github.io/Strawbarry-proj/" target="_blank">
+    <base href="/Strawberry-proj/">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
